--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,5 +4,7 @@ shiny_user: shiny
 shiny_passwd: ''
 shiny_host: shiny
 shiny_localport: 3838
+shiny_listen:
+  - "localhost:80"
 
 shiny_url: "https://download3.rstudio.org/ubuntu-12.04/amd64/shiny-server-{{ shiny_ver }}-amd64.deb"
