--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,26 +23,11 @@
     - shiny-server.conf
   notify: restart shiny
 
-- name: shiny | nginx site
-  tags:
-    - site
-  template:
-    src: "{{ item }}.nginx.j2"
-    dest: /etc/nginx/sites-available/{{ item }}
-  with_items:
-    - shiny
-  notify: restart shiny
-
-- name: shiny | enable nginx site
-  tags:
-    - site
-  file:
-    src: "/etc/nginx/sites-available/{{ item }}"
-    dest: "/etc/nginx/sites-enabled/{{ item }}"
-    state: link
-  with_items:
-    - shiny
-  notify: restart shiny
+- name: shiny | nginx config
+  include_role:
+    name: nginx
+    tasks_from: site.yml
+  with_items: shiny
 
 - name: shiny | service
   tags:
